use Base64 of java 8, required java version is now java 8