@@ -1,22 +1,21 @@
 package de.christian.f.brinkmann.ibus;
 
 import java.security.Key;
+import java.util.Base64;
+
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 public class Crypto {
-	
+
 	private static final String ALGO = "AES";
 	private static byte[] keyValue = null; // 16 Byte
 	private static Key key;
-	
+
 	public static boolean isEncryptionActivated() {
 		return keyValue != null;
 	}
-	
+
 	public static byte[] encrypt(byte[] data) throws Exception {
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.ENCRYPT_MODE, key);
@@ -38,7 +37,7 @@ public class Crypto {
 	public static String decryptString(String encryptedData) throws Exception {
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.DECRYPT_MODE, key);
-		byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+		byte[] decordedValue = java.util.Base64.getDecoder().decode(encryptedData);
 		byte[] decValue = c.doFinal(decordedValue);
 		String decryptedValue = new String(decValue);
 		return decryptedValue;
@@ -48,7 +47,7 @@ public class Crypto {
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal = c.doFinal(Data.getBytes());
-		String encryptedValue = new BASE64Encoder().encode(encVal);
+		String encryptedValue = Base64.getEncoder().encodeToString(encVal);
 		return encryptedValue;
 	}
 }
